--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "javascript-mastery-1000",
-  "version": "1.0.0",
-  "description": "Achieve JavaScript mastery with 1000+ interactive challenges, runnable examples, unit tests, and AI-powered explanations.",
-  "main": "index.js",
+  "name": "advanced-javascript-problem-solver",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Kawser420/javascript-mastery-1000.git"
+  "dependencies": {
+    "@google/genai": "^1.17.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Kawser420/javascript-mastery-1000/issues"
-  },
-  "homepage": "https://github.com/Kawser420/javascript-mastery-1000#readme",
   "devDependencies": {
-    "typescript": "^5.9.2"
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
