--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@google/generative-ai": "^0.24.1",
     "@vitejs/plugin-react": "^5.0.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
