--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.19.0",
     "@google/generative-ai": "^0.24.1",
     "@vitejs/plugin-react": "^5.0.2",
+    "mathjs": "^14.7.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0"
